fix nav menu alignment issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,7 +56,7 @@ body {
 }
 
 .list-inline-item {
-    margin-left: -10px;
+    margin-left: -15px;
 }
 
 /* .fa-shopping-cart {
